Fixed overflowing items in navbar

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -25,11 +25,8 @@
     font-family: 'Proza Libre', sans-serif;
 }
 
-html, body {
-    height: 100%;
-}
-
 body {
+    height: 100%;
     background-color: var(--primary-color);
     display: flex;
     flex-direction: column;
@@ -41,8 +38,7 @@ body {
 }
 
 a {
-   font-style: normal; 
-   color: black;
+    text-decoration: none;
 }
 
 a:visited {
@@ -75,15 +71,17 @@ a:visited {
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
+
 .navbar .container {
     display: grid;
     grid-template-columns: auto minmax(0, 1fr) auto;
     max-width: 1500px;
     margin: 0 auto;
+
 }
 
 .navbar-link {
-    padding: 0.5em 0.5em;
+    padding: 0.5em 1em;
     margin: 0 auto;
 }
 
@@ -92,11 +90,13 @@ a:visited {
     margin-left: 5px;
 }
 
-.navbar-link:hover, .logo:hover {
+.flex-child:hover {
     transform:translateY(-8%);
-    transition: translateY 300ms;
-    transition-timing-function: ease;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;   
+}
+
+.flex-child {
+    text-align: center;
 }
 
 .left {
@@ -115,6 +115,7 @@ a:visited {
     display: flex;
     justify-content: end;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 #face {
